fixed vw on larger monitors to remove horizontal scroll

--- a/styles/IndexNav.module.scss
+++ b/styles/IndexNav.module.scss
@@ -9,7 +9,7 @@
     background:#FAFAFA;
     margin: 0;
     height: 80px;
-    width: 100%;
+    width: 100vw;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
     // position: fixed;
 
